--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ scripts/oe-git-proxy-socks
 sources/
 meta-*/
 buildtools/
-!meta-skeleton
-!meta-selftest
+!meta-custom
+#!meta-skeleton
+#!meta-selftest
 hob-image-*.bb
 *.swp
 *.orig
